# activilinea

./: CMakeLists.txt  rascunhos.txt
act-add/: CMakeLists.txt  act-add.cpp
act-all/: CMakeLists.txt  act-all.cpp
act-change/: CMakeLists.txt  act-change.cpp  main.cpp
act-ln/: CMakeLists.txt  act-add.cpp  act-ln.cpp
act-ls/: CMakeLists.txt  act-ls.cpp
act-rename/: CMakeLists.txt  act-rename.cpp
act-this/: CMakeLists.txt  act-this.cpp  main.cpp
