project(act-ls)
find_package(KDE4 REQUIRED)
find_package(KActivities REQUIRED)
include(KDE4Defaults)
include_directories(${KDE4_INCLUDES} ${KACTIVITIES_INCLUDE_DIRS})
set(SRC_LIST act-ls.cpp)
kde4_add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(act-ls ${KDE4_KDEUI_LIBS} ${KACTIVITIES_LIBRARIES})
install(TARGETS act-ls ${INSTALL_TARGETS_DEFAULT_ARGS})
